added: input text element for name

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/emp-payroll.css">
+        <link rel="stylesheet" href="../css/emp_payroll.css">
         <title>Employee Payroll Form</title>
         <script defer src="../js/emp-form.js"></script>   
     </head>
@@ -17,5 +17,13 @@
                 </div> 
             </div>
         </header>
+        
+        <!-- UC2 -->
+    <div class="form-head">Employee payroll form</div>
+    <div class="row-content">
+        <label class="label text" for="name">Name</label> 
+        <input class="input" type="text" id="name" name="name" placeholder="your name.." required>
+    </div>
+    </div>
     </body>
 </html>
